# iphito

./: .gitignore  CMakeLists.txt  example.iphito  meson.build  readme.rst
cmake/: Conan.cmake
doc/: design_decisions.rst
doc/cd_and_sd/: sd_create_layer.uml
doc/domain_model/: domain_model.uml
doc/use_cases/: create_curve.rst  create_layer.rst  delete_curve.rst  delete_layer.rst  edit_curve.rst
doc/user_stories/: create_curve.rst  create_layer.rst  delete_curve.rst  delete_layer.rst  edit_curve.rst
src/: CMakeLists.txt  Canvas.h  Curve.h  Layer.cpp  Layer.h  main.cpp
src/main/: Bezier.cpp  Bezier.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Curve.h  Hermite3.cpp  Hermite3.h  Hermite5.cpp  Hermite5.h  Layer.cpp  Layer.h  Logger.cpp  Logger.h  Shader.cpp  Shader.h  Utils.h  Window.cpp  Window.h  main.cmake  main.cpp
src/main/cli/: ASTNode.cpp  ASTNode.h  Parser.cpp  Parser.h
src/main/math/: Bezier.cpp  Bezier.h  Curve.h  Hermite3.cpp  Hermite3.h  Hermite5.cpp  Hermite5.h  Line.cpp  Line.h
src/main/renderer/: AABB.cpp  AABB.h  Arrow2D.cpp  Arrow2D.h  Axes2D.cpp  Axes2D.h  Bezier2D.cpp  Bezier2D.h  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Curve2D.cpp  Curve2D.h  Curve2DFactory.cpp  Curve2DFactory.h  Grid.cpp  Grid.h  Hermite32D.cpp  Hermite32D.h  Hermite52D.cpp  Hermite52D.h  Layer.cpp  Layer.h  Line2D.cpp  Line2D.h  Point2D.cpp  Point2D.h  Shader.cpp  Shader.h  Window.cpp  Window.h
src/main/utils/: Logger.cpp  Logger.h  Utils.cpp  Utils.h
src/shaders/: basic.frag  basic.vert
src/test/: BezierTest.cpp  CMakeLists.txt  CanvasTest.cpp  CurveTest.cpp  Hermite3Test.cpp  Hermite5Test.cpp  LayerTest.cpp  ParserTest.cpp  Test_Canvas.cpp  Test_Curve.cpp  Test_Hermite3.cpp  Test_Layer.cpp  Test_main.cpp  mainTest.cpp
tests/: BezierTest.cpp  CanvasTest.cpp  Hermite3Test.cpp  Hermite5Test.cpp  LayerTest.cpp  ParserTest.cpp
